--- a/starter/02-HTML-Fundamentals/index.html
+++ b/starter/02-HTML-Fundamentals/index.html
@@ -16,7 +16,7 @@
     <h6>The Basic Language of the Web: HTML</h6>
     -->
 
-    <header>
+    <header class="main-header">
       <h1>📘 The Code Magazine</h1>
 
       <nav>
@@ -115,7 +115,7 @@
     <aside>
       <h4>Related posts</h4>
 
-      <ul>
+      <ul class="decoration">
         <li>
           <img
             src="img/related-1.jpg"
