--- a/starter/08-Omnifood-Responsive/index.html
+++ b/starter/08-Omnifood-Responsive/index.html
@@ -12,10 +12,11 @@
     />
     <link rel="stylesheet" href="content/css/general.css" />
     <link rel="stylesheet" href="content/css/styles.css" />
+    <link rel="stylesheet" href="content/css/queries.css" />
     <title>Omnifood</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header nav-open">
       <a href="">
         <img src="content/img/omnifood-logo.png" alt="" class="logo" />
       </a>
@@ -28,6 +29,12 @@
           <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
         </ul>
       </nav>
+    <!-- Mobile Buttom -->   
+      <button  class="btn-mobile-nav">
+        <ion-icon  class="icon-mobile-nav" id="open" name="menu-outline"></ion-icon>
+        <ion-icon class="icon-mobile-nav" id="close" name="close-outline"></ion-icon>
+      </button>
+
     </header>
     <main>
       <section class="section-hero">
@@ -656,6 +663,8 @@
         
       </div>
     </footer>
+
+    <script src="content/app.js"></script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
