--- a/starter/08-Omnifood-Responsive/index.html
+++ b/starter/08-Omnifood-Responsive/index.html
@@ -16,7 +16,7 @@
     <title>Omnifood</title>
   </head>
   <body>
-    <header class="header nav-open">
+    <header class="header">
       <a href="">
         <img src="content/img/omnifood-logo.png" alt="" class="logo" />
       </a>
