finish the web total

--- a/starter/08-Omnifood-Responsive/index.html
+++ b/starter/08-Omnifood-Responsive/index.html
@@ -457,7 +457,7 @@
               <ul class="list">
                 <li class="list-item">
                   <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
-                  <span>Order from 11am and 9pm</span>
+                  <span>Order from 11am - 9pm</span>
                 </li>
               </ul>  
               <ul class="list">
