--- a/starter/09-Omnifood-Optimizations/index.html
+++ b/starter/09-Omnifood-Optimizations/index.html
@@ -595,7 +595,7 @@
                 first meal is on us!
               </p>
 
-              <form class="cta-form" action="#">
+              <form class="cta-form" name="sign-up" netlify>
                 <div>
                   <label for="full-name">Full Name</label>
                   <input
@@ -603,6 +603,7 @@
                     type="text"
                     placeholder="John Smith"
                     required
+                    name="full-name"
                   />
                 </div>
 
@@ -612,13 +613,14 @@
                     id="email"
                     type="email"
                     placeholder="me@example.com"
+                    name="email"
                     required
                   />
                 </div>
 
                 <div>
                   <label for="select-where">Where did you hear from us?</label>
-                  <select id="select-where" required>
+                  <select id="select-where" name="select-where" required>
                     <option value="">Please choose one option:</option>
                     <option value="friends">Friends and family</option>
                     <option value="youtube">YouTube video</option>
